st:aboutUs-styled the about us page

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
   </div>
 
   <div class="container">
-    <div class="aboutUs d-flex flex-column justify-content-end align-items-center">
-      <p class="h3">ABOUT US</p>
-      <p>When you work with us,you are part of a team of commited colaborators.All aspects of our software development
+    <div class="aboutUs d-flex flex-column justify-content-end align-items-center p-5">
+      <p class="h3 ">ABOUT US</p>
+      <p class="text-center">When you work with us,you are part of a team of commited colaborators.All aspects of our software development
         progress are integrated,interactive <br> and agile.<br>Our approach
         unifies design, development and product management to create exceptional product.<br>We start each project
         by understanding your business goals,the user'e needs and product requirements<br>
