--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
       </div>
 
-      <p>WELCOME</p>
-      <p>TO DELANI STUDIO</p>
+      <p class="welcome">WELCOME</p>
+      <p class="welcome">TO DELANI STUDIO</p>
       <p>AMAZING PEOPLE ARE MAKING AMAZING IN A FUN ENVIRONMENT</p>
       <img src="./assets/mouse_click.png" alt="" class="mouse">
 
@@ -37,6 +37,19 @@
     </div>
   </div>
 
+  <div class="bgService">
+
+    <div class=" container aboutUs d-flex flex-column justify-content-end align-items-center text-white p-5">
+      <p class="h3 ">Services</p>
+
+      <p class="text-center">
+        Before we sign a contract or write a line of code our team will spend the necessarty time needed to
+        understand your product vision <br>
+        The outcome of this coping sessions is a proposal or high level statement of work.<br>
+        based on your requirements,we can provide a complete offering or just the pieces you need.
+    </p>
+    </div>
+  </div>
   
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 <script src="./js/script.js"></script>
