--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </div>
   </div>
 
-  <div class="bgService">
+  <div class="bgService ">
 
     <div class=" container aboutUs d-flex flex-column justify-content-end align-items-center text-white p-5">
       <p class="h3 ">Services</p>
@@ -48,6 +48,23 @@
         The outcome of this coping sessions is a proposal or high level statement of work.<br>
         based on your requirements,we can provide a complete offering or just the pieces you need.
     </p>
+    </div>
+  </div>
+  <div class="container py-4 text-center">
+    <p class="h3 mb-5">WHAT WE DO</p>
+    <div class="row">
+      <div class="col-md-4">
+        <img src="./assets/design_icon.png" alt="">
+        <p>DESIGN</p>
+      </div>
+      <div class="col-md-4">
+        <img src="./assets/dev_icon.png" alt="">
+        <p>DEVELOPMENT</p>
+      </div>
+      <div class="col-md-4">
+        <img src="./assets/product_icon.png" alt="">
+        <p>PRODUCT MANAGEMENT</p>
+      </div>
     </div>
   </div>
   
