--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
   <div class="bgService ">
 
-    <div class=" container aboutUs d-flex flex-column justify-content-end align-items-center text-white p-5">
+    <div class=" container aboutUs d-flex flex-column justify-content-end align-items-center text-white services">
       <p class="h3 ">Services</p>
 
       <p class="text-center">
@@ -50,20 +50,43 @@
     </p>
     </div>
   </div>
-  <div class="container py-4 text-center">
+  <div class="whatwedo py-4 text-center">
     <p class="h3 mb-5">WHAT WE DO</p>
     <div class="row">
       <div class="col-md-4">
         <img src="./assets/design_icon.png" alt="">
         <p>DESIGN</p>
+        <p id="design">
+          Our design practice offers a full range of services <br>including brand strategy, interaction and
+          visual
+          design <br>and user experience testing.<br><br>
+
+          Throughout your project, our designers create and <br>implement visual design and workflows, solicit
+          user<br> feedback and work with you to make sure what gets built <br>is what is needed.
+        </p>
       </div>
       <div class="col-md-4">
         <img src="./assets/dev_icon.png" alt="">
         <p>DEVELOPMENT</p>
+        <p id="development">
+          All engineers are fluent in the latest enterprise, mobile <br>and web development technologies.<br>
+          <br>
+          They collaborate with your team to write, and improve<br> code on a daily basis, using proven
+          practices
+          such as<br> test-driven development and pair programming.
+        </p>
       </div>
       <div class="col-md-4">
         <img src="./assets/product_icon.png" alt="">
         <p>PRODUCT MANAGEMENT</p>
+        <p id="products">
+          Planning and development is iterative. Because we are <br>constantly coding and testing, the
+          products
+          we
+          build are <br>always ready to go live.<br><br>
+
+          This iterative process allows for changes as business<br> requirements evolve.
+        </p>
       </div>
     </div>
   </div>
