--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="./css/style.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
+
 <body>
   <div class="bg">
     <div class="container content d-flex flex-column justify-content-end align-items-center">
@@ -28,12 +31,13 @@
   <div class="container">
     <div class="aboutUs d-flex flex-column justify-content-end align-items-center p-5">
       <p class="h3 ">ABOUT US</p>
-      <p class="text-center">When you work with us,you are part of a team of commited colaborators.All aspects of our software development
+      <p class="text-center">When you work with us,you are part of a team of commited colaborators.All aspects of our
+        software development
         progress are integrated,interactive <br> and agile.<br>Our approach
         unifies design, development and product management to create exceptional product.<br>We start each project
         by understanding your business goals,the user'e needs and product requirements<br>
         then we help translate them into effective and elegant solutions.
-    </p>
+      </p>
     </div>
   </div>
 
@@ -47,7 +51,7 @@
         understand your product vision <br>
         The outcome of this coping sessions is a proposal or high level statement of work.<br>
         based on your requirements,we can provide a complete offering or just the pieces you need.
-    </p>
+      </p>
     </div>
   </div>
   <div class="whatwedo py-4 text-center">
@@ -90,8 +94,58 @@
       </div>
     </div>
   </div>
-  
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-<script src="./js/script.js"></script>
+  <div class="container  text-center">
+    <p class="h3 my-5">PORTFOLIO</p>
+    <!-- <div class="portfolioImg"> -->
+      <div class="row portfolio">
+        <div class="col-md-3 col-sm-4 col-xs-6 my-1">
+          <img src="./assets/work4.jpg" class="res" alt="">
+
+        </div>
+        <div class="col-md-3 col-sm-4 col-xs-6 my-1">
+          <img src="./assets/portfolio2.jpg" class="res" alt="">
+
+        </div>
+        <div class="col-md-3 col-sm-4 col-xs-6 my-1">
+          <img src="./assets/portfolio3.jpg" class="res" alt="">
+
+        </div>
+        <div class="col-md-3 col-sm-4 col-xs-6 my-1">
+          <img src="./assets/portfolio4.jpg" class="res" alt="">
+
+        </div>
+      </div>
+      <div class="row secondRow portfolio">
+        <div class="col-md-3 col-sm-4 col-xs-6 my-1">
+          <img src="./assets/portfolio5.jpg" class="res" alt="">
+
+        </div>
+        <div class="col-md-3 col-sm-4 col-xs-6 my-1">
+          <img src="./assets/work6.jpg" class="res" alt="">
+
+        </div>
+        <div class="col-md-3 col-sm-4 col-xs-6 my-1">
+          <img src="./assets/portfolio6.jpg" class="res" alt="">
+
+        </div>
+        <div class="col-md-3 col-sm-4 col-xs-6 my-1">
+          <img src="./assets/portfolio8.jpg" class="res" alt="">
+
+        </div>
+      </div>
+      <!-- <img src="./assets/portfolio2.jpg" alt="">
+      <img src="./assets/portfolio3.jpg" alt="">
+      <img src="./assets/portfolio4.jpg" alt="">
+      <img src="./assets/portfolio5.jpg" alt="">
+      <img src="./assets/portfolio6.jpg" alt="">
+      <img src="./assets/portfolio5.jpg" alt="">
+      <img src="./assets/portfolio6.jpg" alt=""> -->
+    <!-- </div> -->
+  </div>
+
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+  <script src="./js/script.js"></script>
 </body>
+
 </html>
