st-ContactUsStructure-Created the Contact us structure

--- a/index.html
+++ b/index.html
@@ -133,15 +133,27 @@
 
         </div>
       </div>
-      <!-- <img src="./assets/portfolio2.jpg" alt="">
-      <img src="./assets/portfolio3.jpg" alt="">
-      <img src="./assets/portfolio4.jpg" alt="">
-      <img src="./assets/portfolio5.jpg" alt="">
-      <img src="./assets/portfolio6.jpg" alt="">
-      <img src="./assets/portfolio5.jpg" alt="">
-      <img src="./assets/portfolio6.jpg" alt=""> -->
-    <!-- </div> -->
+     
   </div>
+  <div class="bgContact">
+    
+    <div class="container services " >
+      <form action="" class="bg-transparent">
+        <div class="row my-4">
+          <div class="col-md-6">
+            <input type="text" name="name" id="name" class="bg-transparent form-control " placeholder="Name"  >
+
+          </div>
+          <div class="col-md-6">
+            <input type="email" name="email" id="emai" class="bg-transparent form-control" placeholder="Email" >
+
+          </div>
+        </div>      
+        <textarea name="" id="" cols="30" rows="10" class="form-control bg-transparent" placeholder="Your Message Here"></textarea>
+      </form>
+    </div>
+  </div>
+
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
