st:Title-Added Contact me title

--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
   <div class="bgContact">
     
     <div class="container services " >
+      <p class="text-white text-center contactUs">CONTACT US</p>
       <form action="" class="bg-transparent">
         <div class="row my-4">
           <div class="col-md-6">
