st:socials-Created the socials section

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       </div>
     </div>
   </div>
-  <div class="container  text-center">
+  <div class="container  text-center my-5">
     <p class="h3 my-5">PORTFOLIO</p>
     <!-- <div class="portfolioImg"> -->
       <div class="row portfolio">
@@ -154,8 +154,18 @@
       </form>
     </div>
   </div>
+  <div class="container footer my-4">
+    <img src="./assets/twitter.png" class="footer-img" alt="">
+    <img src="./assets/dribble.png" class="footer-img" alt="">
+    <img src="./assets/facebook.png" class="footer-img" alt="">
+    <img src="./assets/g_plus.png" class="footer-img" alt="">
+    <img src="./assets/skype.png" class="footer-img" alt="">
+    <img src="./assets/stumble_upon.png" class="footer-img" alt="">
+    <img src="./assets/behance.png" class="footer-img" alt="">
+    <img src="./assets/pinterest.png" class="footer-img" alt="">
+    <img src="./assets/flickr.png" class="footer-img" alt="">
 
-
+  </div>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <script src="./js/script.js"></script>
