st-rightsReserved-Made a rights reserved section

--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
     </div>
   </div>
   <div class="container footer my-4">
+   <div class="my-3">
     <img src="./assets/twitter.png" class="footer-img" alt="">
     <img src="./assets/dribble.png" class="footer-img" alt="">
     <img src="./assets/facebook.png" class="footer-img" alt="">
@@ -164,7 +165,8 @@
     <img src="./assets/behance.png" class="footer-img" alt="">
     <img src="./assets/pinterest.png" class="footer-img" alt="">
     <img src="./assets/flickr.png" class="footer-img" alt="">
-
+   </div>
+    <p class="text-center">Delani Studio <br> 2019</p>
   </div>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
