--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
   <div class="bgService ">
 
-    <div class=" container aboutUs d-flex flex-column justify-content-end align-items-center text-white services">
+    <div class=" container aboutUs d-flex flex-column justify-content-end align-items-center text-white services ">
       <p class="h3 ">Services</p>
 
       <p class="text-center">
@@ -56,11 +56,11 @@
   </div>
   <div class="whatwedo py-4 text-center">
     <p class="h3 mb-5">WHAT WE DO</p>
-    <div class="row">
+    <div class="row ">
       <div class="col-md-4">
-        <img src="./assets/design_icon.png" alt="">
-        <p>DESIGN</p>
-        <p id="design">
+        <img src="./assets/design_icon.png" id="designIcon" alt="">
+        <p class="h6 mt-2">DESIGN</p>
+        <p id="design" class="designText">
           Our design practice offers a full range of services <br>including brand strategy, interaction and
           visual
           design <br>and user experience testing.<br><br>
@@ -70,8 +70,8 @@
         </p>
       </div>
       <div class="col-md-4">
-        <img src="./assets/dev_icon.png" alt="">
-        <p>DEVELOPMENT</p>
+        <img src="./assets/dev_icon.png" id="developmentIcon" alt="">
+        <p class="h6 mt-2">DEVELOPMENT</p>
         <p id="development">
           All engineers are fluent in the latest enterprise, mobile <br>and web development technologies.<br>
           <br>
@@ -81,8 +81,8 @@
         </p>
       </div>
       <div class="col-md-4">
-        <img src="./assets/product_icon.png" alt="">
-        <p>PRODUCT MANAGEMENT</p>
+        <img src="./assets/product_icon.png" id="productsIcon" alt="">
+        <p class="h6 mt-2" >PRODUCT MANAGEMENT</p>
         <p id="products">
           Planning and development is iterative. Because we are <br>constantly coding and testing, the
           products
