ft:Hover-Added hover effects on the portfolio section

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <div class="bgService ">
 
     <div class=" container aboutUs d-flex flex-column justify-content-end align-items-center text-white services ">
-      <p class="h3 ">Services</p>
+      <p class="h3 py-3">SERVICES</p>
 
       <p class="text-center">
         Before we sign a contract or write a line of code our team will spend the necessarty time needed to
@@ -94,41 +94,56 @@
       </div>
     </div>
   </div>
-  <div class="container  text-center my-5">
+  <div class="container  text-center my-5" id="portfolioImages">
     <p class="h3 my-5">PORTFOLIO</p>
     <!-- <div class="portfolioImg"> -->
-      <div class="row portfolio">
-        <div class="col-md-3 col-sm-4 col-xs-6 my-1">
-          <img src="./assets/work4.jpg" class="res" alt="">
+      <div class="row portfolio" >
+        <div class="col-md-3 col-sm-4 col-xs-6 my-1  position-relative ">
+          <p class="hoverText h5">SOMBRE BACKGROUND</p>
+          <img src="./assets/work4.jpg" class="res " alt="">
 
         </div>
-        <div class="col-md-3 col-sm-4 col-xs-6 my-1">
-          <img src="./assets/portfolio2.jpg" class="res" alt="">
+        <div class="col-md-3 col-sm-4 col-xs-6 my-1  position-relative">
+          <p class="hoverText h5">ONTARIO SECURITY</p>
+
+          <img src="./assets/portfolio2.jpg" class="res " alt="">
 
         </div>
-        <div class="col-md-3 col-sm-4 col-xs-6 my-1">
+        <div class="col-md-3 col-sm-4 col-xs-6 my-1  position-relative">
+          <p class="hoverText h5">DESERT THEME</p>
+
           <img src="./assets/portfolio3.jpg" class="res" alt="">
 
         </div>
-        <div class="col-md-3 col-sm-4 col-xs-6 my-1">
+        <div class="col-md-3 col-sm-4 col-xs-6 my-1  position-relative">
+          <p class="hoverText h5">MOVIE WEBSITE</p>
+
           <img src="./assets/portfolio4.jpg" class="res" alt="">
 
         </div>
       </div>
       <div class="row secondRow portfolio">
-        <div class="col-md-3 col-sm-4 col-xs-6 my-1">
+        <div class="col-md-3 col-sm-4 col-xs-6 my-1 position-relative">
+          <p class="hoverText h5">MEDITATION SITE</p>
+
           <img src="./assets/portfolio5.jpg" class="res" alt="">
 
         </div>
-        <div class="col-md-3 col-sm-4 col-xs-6 my-1">
+        <div class="col-md-3 col-sm-4 col-xs-6 my-1  position-relative">
+          <p class="hoverText h5">SURVEY SITE</p>
+
           <img src="./assets/work6.jpg" class="res" alt="">
 
         </div>
-        <div class="col-md-3 col-sm-4 col-xs-6 my-1">
+        <div class="col-md-3 col-sm-4 col-xs-6 my-1  position-relative">
+          <p class="hoverText h5">BURNED LOGO</p>
+
           <img src="./assets/portfolio6.jpg" class="res" alt="">
 
         </div>
-        <div class="col-md-3 col-sm-4 col-xs-6 my-1">
+        <div class="col-md-3 col-sm-4 col-xs-6 my-1  position-relative">
+          <p class="hoverText h5">GIRAFFE RESTAURANT</p>
+
           <img src="./assets/portfolio8.jpg" class="res" alt="">
 
         </div>
