--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
   <div class="bg">
     <div class="container content d-flex flex-column justify-content-end align-items-center">
       <div>
-        <img src="./assets/logo.png" alt="" class="my-5">
+        <img src="./assets/logo.png" alt="" class="my-4">
 
       </div>
 
-      <p class="welcome">WELCOME</p>
+      <p class="welcome  pb-3">WELCOME</p>
       <p class="welcome">TO DELANI STUDIO</p>
       <p>AMAZING PEOPLE ARE MAKING AMAZING IN A FUN ENVIRONMENT</p>
       <img src="./assets/mouse_click.png" alt="" class="mouse">
@@ -157,15 +157,15 @@
       <form action="" class="bg-transparent">
         <div class="row my-4">
           <div class="col-md-6">
-            <input type="text" name="name" id="name" class="bg-transparent form-control " placeholder="Name"  >
+            <input type="text" name="name" id="name" class="bg-transparent form-control text-white " placeholder="Name"  >
 
           </div>
           <div class="col-md-6">
-            <input type="email" name="email" id="emai" class="bg-transparent form-control" placeholder="Email" >
+            <input type="email" name="email" id="emai" class="bg-transparent form-control text-white" placeholder="Email" >
 
           </div>
         </div>      
-        <textarea name="" id="" cols="30" rows="10" class="form-control bg-transparent" placeholder="Your Message Here"></textarea>
+        <textarea name="" id="" cols="30" rows="10" class="form-control bg-transparent text-white" placeholder="Your Message Here"></textarea>
       </form>
     </div>
   </div>
