ft:MailChimp-Integrates mail chimp api

--- a/index.html
+++ b/index.html
@@ -152,20 +152,24 @@
   </div>
   <div class="bgContact">
     
-    <div class="container services " >
-      <p class="text-white text-center contactUs">CONTACT US</p>
-      <form action="" class="bg-transparent">
+    <div class="container services text-center >
+      <p class=" text-center contactUs text-white">CONTACT US</p>
+      <form action="https://moringaschool.us14.list-manage.com/subscribe/post?u=56211ccc9e3251905b86c4177&amp;id=70e371c2fe" method="post" id="contactForm" class="bg-transparent">
         <div class="row my-4">
           <div class="col-md-6">
-            <input type="text" name="name" id="name" class="bg-transparent form-control text-white " placeholder="Name"  >
+            <input type="text" name="FNAME" id="name" class="bg-transparent form-control text-white " placeholder="Name"  >
 
           </div>
           <div class="col-md-6">
-            <input type="email" name="email" id="emai" class="bg-transparent form-control text-white" placeholder="Email" >
+            <input type="email" name="EMAIL" id="emai" class="bg-transparent form-control text-white" placeholder="Email" >
 
           </div>
         </div>      
-        <textarea name="" id="" cols="30" rows="10" class="form-control bg-transparent text-white" placeholder="Your Message Here"></textarea>
+        <textarea name="MMERGE2" id="" cols="30" rows="10" class="form-control bg-transparent text-white" placeholder="Your Message Here"></textarea>
+       
+        <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-outline-light my-4">
+
+
       </form>
     </div>
   </div>
@@ -185,7 +189,9 @@
   </div>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-  <script src="./js/script.js"></script>
+    <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
+    <script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[1]='FNAME';ftypes[1]='text';fnames[0]='EMAIL';ftypes[0]='email';fnames[2]='MMERGE2';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
