ft-validation-FormValidation

--- a/index.html
+++ b/index.html
@@ -161,11 +161,11 @@
 
           </div>
           <div class="col-md-6">
-            <input type="email" name="EMAIL" id="emai" class="bg-transparent form-control text-white" placeholder="Email" >
+            <input type="email" name="EMAIL" id="email" class="bg-transparent form-control text-white" placeholder="Email" >
 
           </div>
         </div>      
-        <textarea name="MMERGE2" id="" cols="30" rows="10" class="form-control bg-transparent text-white" placeholder="Your Message Here"></textarea>
+        <textarea name="MMERGE2" id="message" cols="30" rows="10" class="form-control bg-transparent text-white" placeholder="Your Message Here"></textarea>
        
         <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-outline-light my-4">
 
