rf-Form-Refactored handled mailchimp operated

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
       </div>
 
-      <p class="welcome  pb-3">WELCOME</p>
-      <p class="welcome">TO DELANI STUDIO</p>
+      <p class="welcome  pb-3 text-center">WELCOME</p>
+      <p class="welcome text-center">TO DELANI STUDIO</p>
       <p>AMAZING PEOPLE ARE MAKING AMAZING IN A FUN ENVIRONMENT</p>
       <img src="./assets/mouse_click.png" alt="" class="mouse">
 
@@ -158,9 +158,7 @@
 
     <div class="container services text-center ">
       <p class=" text-center contactUs text-white">CONTACT US</p>
-      <form
-        action="https://moringaschool.us14.list-manage.com/subscribe/post?u=56211ccc9e3251905b86c4177&amp;id=70e371c2fe"
-        method="post" id="contactForm" class="bg-transparent">
+      <form action="https://moringaschool.us14.list-manage.com/subscribe/post?u=56211ccc9e3251905b86c4177&amp;id=70e371c2fe" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" novalidate>
         <div class="row my-4">
           <div class="col-md-6">
             <input type="text" name="FNAME" id="name" class="bg-transparent form-control text-white "
@@ -200,9 +198,11 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
+
   <script
     type='text/javascript'>(function ($) { window.fnames = new Array(); window.ftypes = new Array(); fnames[1] = 'FNAME'; ftypes[1] = 'text'; fnames[0] = 'EMAIL'; ftypes[0] = 'email'; fnames[2] = 'MMERGE2'; ftypes[2] = 'text'; }(jQuery)); var $mcj = jQuery.noConflict(true);</script>
-  <script src="./js/script.js"></script>
-</body>
+    <script src="./js/script.js"></script>
+
+  </body>
 
 </html>
