ft:deployment-This commit deploys the page

--- a/index.html
+++ b/index.html
@@ -23,18 +23,19 @@
 
       </div>
 
-      <p class="welcome  pb-3 text-center">WELCOME</p>
-      <p class="welcome text-center">TO DELANI STUDIO</p>
-      <p>AMAZING PEOPLE ARE MAKING AMAZING IN A FUN ENVIRONMENT</p>
-      <img src="./assets/mouse_click.png" alt="" class="mouse">
+      <p class="welcome h1  pb-3 text-center"><strong>WELCOME</strong></p>
+      <p class="welcome h1 text-center"><strong>TO DELANI STUDIO</strong></p>
+      <p class="text-center">AMAZING PEOPLE ARE MAKING AMAZING IN A FUN ENVIRONMENT</p>
+      <a href="#about"><img src="./assets/mouse_click.png" alt="" class="mouse" ></a>
+      
 
     </div>
 
   </div>
 
   <div class="container">
-    <div class="aboutUs d-flex flex-column justify-content-end align-items-center p-5">
-      <p class="h3 ">ABOUT US</p>
+    <div class="aboutUs d-flex flex-column justify-content-end align-items-center p-5 " id="about">
+      <p class="h3 "><strong>ABOUT US</strong></p>
       <p class="text-center">When you work with us,you are part of a team of commited colaborators.All aspects of our
         software development
         progress are integrated,interactive <br> and agile.<br>Our approach
@@ -48,7 +49,7 @@
   <div class="bgService ">
 
     <div class=" container aboutUs d-flex flex-column justify-content-end align-items-center text-white services ">
-      <p class="h3 py-3">SERVICES</p>
+      <p class="h3 py-3"><strong>SERVICES</strong></p>
 
       <p class="text-center">
         Before we sign a contract or write a line of code our team will spend the necessarty time needed to
@@ -59,7 +60,7 @@
     </div>
   </div>
   <div class="whatwedo py-4 text-center">
-    <p class="h3 mb-5">WHAT WE DO</p>
+    <p class="h3 mb-5"><strong>WHAT WE DO</strong></p>
     <div class="row ">
       <div class="col-md-4">
         <img src="./assets/design_icon.png" id="designIcon" alt="">
@@ -99,7 +100,7 @@
     </div>
   </div>
   <div class="container  text-center my-5" id="portfolioImages">
-    <p class="h3 my-5">PORTFOLIO</p>
+    <p class="h3 my-5"><strong>PORTFOLIO</strong></p>
     <!-- <div class="portfolioImg"> -->
     <div class="row portfolio">
       <div class="col-md-3 col-sm-4 col-xs-6 my-1  position-relative ">
@@ -171,11 +172,11 @@
 
           </div>
         </div>
-        <textarea name="MMERGE2" id="message" cols="30" rows="10" class="form-control bg-transparent text-white"
+        <textarea name="MMERGE2" id="message" cols="30" rows="10" class="form-control bg-transparent text-white "
           placeholder="Your Message Here"></textarea>
 
-        <input type="submit" value="Subscribe" name="subscribe" id="subscribe" class="btn btn-outline-light my-4"
-          value="Send">
+        <input type="submit"  name="subscribe" id="subscribe" class="btn btn-outline-light my-4"
+          value="Submit">
 
 
       </form>
