st-Indentation:styling indentation to the files

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
       <p class="welcome h1  pb-3 text-center"><strong>WELCOME</strong></p>
       <p class="welcome h1 text-center"><strong>TO DELANI STUDIO</strong></p>
       <p class="text-center">AMAZING PEOPLE ARE MAKING AMAZING IN A FUN ENVIRONMENT</p>
-      <a href="#about"><img src="./assets/mouse_click.png" alt="" class="mouse" ></a>
-      
+      <a href="#about"><img src="./assets/mouse_click.png" alt="" class="mouse"></a>
+
 
     </div>
 
@@ -100,7 +100,7 @@
     </div>
   </div>
   <div class="container  text-center my-5" id="portfolioImages">
-    <p class="h3 my-5"><strong>PORTFOLIO</strong></p>
+    <p class="h3 my-5"><strong>PORTFOLIO</strong></p>FFFFFF
     <!-- <div class="portfolioImg"> -->
     <div class="row portfolio">
       <div class="col-md-3 col-sm-4 col-xs-6 my-1  position-relative ">
@@ -159,7 +159,9 @@
 
     <div class="container services text-center ">
       <p class=" text-center contactUs text-white">CONTACT US</p>
-      <form action="https://moringaschool.us14.list-manage.com/subscribe/post?u=56211ccc9e3251905b86c4177&amp;id=70e371c2fe" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" novalidate>
+      <form
+        action="https://moringaschool.us14.list-manage.com/subscribe/post?u=56211ccc9e3251905b86c4177&amp;id=70e371c2fe"
+        method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" novalidate>
         <div class="row my-4">
           <div class="col-md-6">
             <input type="text" name="FNAME" id="name" class="bg-transparent form-control text-white "
@@ -175,8 +177,7 @@
         <textarea name="MMERGE2" id="message" cols="30" rows="10" class="form-control bg-transparent text-white "
           placeholder="Your Message Here"></textarea>
 
-        <input type="submit"  name="subscribe" id="subscribe" class="btn btn-outline-light my-4"
-          value="Submit">
+        <input type="submit" name="subscribe" id="subscribe" class="btn btn-outline-light my-4" value="Submit">
 
 
       </form>
@@ -202,8 +203,8 @@
 
   <script
     type='text/javascript'>(function ($) { window.fnames = new Array(); window.ftypes = new Array(); fnames[1] = 'FNAME'; ftypes[1] = 'text'; fnames[0] = 'EMAIL'; ftypes[0] = 'email'; fnames[2] = 'MMERGE2'; ftypes[2] = 'text'; }(jQuery)); var $mcj = jQuery.noConflict(true);</script>
-    <script src="./js/script.js"></script>
+  <script src="./js/script.js"></script>
 
-  </body>
+</body>
 
 </html>
