--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     </div>
   </div>
   <div class="container  text-center my-5" id="portfolioImages">
-    <p class="h3 my-5"><strong>PORTFOLIO</strong></p>FFFFFF
+    <p class="h3 my-5"><strong>PORTFOLIO</strong></p>
     <!-- <div class="portfolioImg"> -->
     <div class="row portfolio">
       <div class="col-md-3 col-sm-4 col-xs-6 my-1  position-relative ">
